Extra C bare bones.

--- a/vesper/src/boot/Makefile
+++ b/vesper/src/boot/Makefile
@@ -1,4 +1,7 @@
 
+floppy.img: floppy.s kernel.bin grub/stage1 grub/stage2
+	nasm -f bin -o floppy.img floppy.s
+
 kernel.bin: kernel.o loader.o
 	ld -T linker.ld -o kernel.bin loader.o kernel.o
 
@@ -6,4 +9,4 @@ loader.o: loader.s
 	nasm -f elf -o loader.o loader.s
 
 kernel.o: kernel.c
-	gcc -o kernel.o -c kernel.c -Wall -Wextra -Werror -nostdlib -nostartfiles -nodefaultlibs
+	gcc -o kernel.o -c kernel.c -Wall -Wextra -Werror -nostdlib -nostartfiles -nodefaultlibs -fno-leading-underscores
