--- a/vesper/src/boot/Makefile
+++ b/vesper/src/boot/Makefile
@@ -1,3 +1,7 @@
+.PHONY: bootable
+
+bootable: floppy.img sizecalc.sh
+	@./sizecalc.sh
 
 floppy.img: floppy.s kernel.bin grub/stage1 grub/stage2
 	nasm -f bin -o floppy.img floppy.s
@@ -9,4 +13,7 @@ loader.o: loader.s
 	nasm -f elf -o loader.o loader.s
 
 kernel.o: kernel.c
-	gcc -o kernel.o -c kernel.c -Wall -Wextra -Werror -nostdlib -nostartfiles -nodefaultlibs -fno-leading-underscores
+	gcc -o kernel.o -c kernel.c -Wall -Wextra -Werror -nostdlib -nostartfiles -nodefaultlibs -fno-leading-underscore
+
+clean:
+	rm floppy.img kernel.bin *.o
