More C++ish way.

--- a/vesper/src/boot/Makefile
+++ b/vesper/src/boot/Makefile
@@ -1,3 +1,5 @@
+CXXFLAGS = -Wall -Wextra -Werror -nostdlib -nostartfiles -nodefaultlibs -fno-leading-underscore -fno-rtti -fno-exceptions
+
 .PHONY: bootable
 
 bootable: floppy.img sizecalc.sh
@@ -6,14 +8,17 @@ bootable: floppy.img sizecalc.sh
 floppy.img: floppy.s kernel.bin grub/stage1 grub/stage2
 	nasm -f bin -o floppy.img floppy.s
 
-kernel.bin: kernel.o loader.o
-	ld -T linker.ld -o kernel.bin loader.o kernel.o
+kernel.bin: kernel.o loader.o DefaultConsole.o
+	ld -T linker.ld -o kernel.bin loader.o kernel.o DefaultConsole.o
 
 loader.o: loader.s
 	nasm -f elf -o loader.o loader.s
 
 kernel.o: kernel.cpp
-	g++ -o kernel.o -c kernel.cpp -Wall -Wextra -Werror -nostdlib -nostartfiles -nodefaultlibs -fno-leading-underscore
+	g++ -o kernel.o -c kernel.cpp $(CXXFLAGS)
+
+DefaultConsole.o: DefaultConsole.cpp
+	g++ -o DefaultConsole.o -c DefaultConsole.cpp $(CXXFLAGS)
 
 clean:
 	rm floppy.img kernel.bin *.o
