Actually use config.h, rename other configs to something more sensible.

--- a/src/runtime/mustl/Makefile
+++ b/src/runtime/mustl/Makefile
@@ -117,7 +117,7 @@ dist:
 	    tar --numeric-owner --same-owner -jcf ${DISTDIR}/${DISTTAR} ${DISTNAM}; rm -rf ${DISTNAM})
 
 distclean:	clean
-	@rm -f Config.mk config.h ${LIBNAME}.spec bsconf.o bsconf .depend bvt/.depend
+	@rm -f Config.mk settings.h ${LIBNAME}.spec bsconf.o bsconf .depend bvt/.depend
 
 maintainer-clean: distclean
 	@rm -rf docs/html
