--- a/.bzrignore
+++ b/.bzrignore
@@ -16,3 +16,7 @@ debugger.log
 Debug
 ./docs/mockups/java/bin/*
 .kdev_include_paths
+.DS_Store
+kernel-startup.sublime-project
+typesystem.sublime-project
+typesystem.sublime-workspace
