Ignore sublime files.

--- a/.bzrignore
+++ b/.bzrignore
@@ -20,3 +20,5 @@ Debug
 kernel-startup.sublime-project
 typesystem.sublime-project
 typesystem.sublime-workspace
+meddler.sublime-project
+meddler.sublime-workspace
