--- a/src/tools/mkbootimg/menu.lst.in
+++ b/src/tools/mkbootimg/menu.lst.in
@@ -1,26 +1,36 @@
 hiddenmenu
 timeout 0
 
+#
+# launcher is loaded by grub and started
+# nucleus is loaded as a separate module
+# bootimage is loaded as another module
+#
+# launcher installs and protects nucleus in a privileged zone
+# <at this point syscalls should already work>
+# it then loads root domain module from bootimage and starts it in ring3
+#
+
 title Metta
     root (@ROOT@)
-    kernel /kickstart
-    module /kernel-startup
-    module /system-bootimage
+    kernel /launcher
+    module /nucleus
+    module /sysimage
 
-title Metta [debug output]
-    root (@ROOT@)
-    kernel /kickstart debug
-    module /kernel-startup
-    module /system-bootimage
-
-title Metta 32-bit only
-    root (@ROOT@)
-    kernel /kickstart no64
-    module /kernel-startup
-    module /system-bootimage
-
-title Metta 32-bit only [debug output]
-    root (@ROOT@)
-    kernel /kickstart no64 debug
-    module /kernel-startup
-    module /system-bootimage
+#title Metta [debug output]
+#    root (@ROOT@)
+#    kernel /kickstart debug
+#    module /kernel-startup
+#    module /system-bootimage
+#
+#title Metta 32-bit only
+#    root (@ROOT@)
+#    kernel /kickstart no64
+#    module /kernel-startup
+#    module /system-bootimage
+#
+#title Metta 32-bit only [debug output]
+#    root (@ROOT@)
+#    kernel /kickstart no64 debug
+#    module /kernel-startup
+#    module /system-bootimage
