--- a/src/tools/mkbootimg/menu.lst.in
+++ b/src/tools/mkbootimg/menu.lst.in
@@ -3,8 +3,8 @@ timeout 0
 
 #
 # launcher is loaded by grub and started
-# nucleus is loaded as a separate module
-# bootimage is loaded as another module
+# sysimage is loaded as a separate module
+# nucleus is inside a bootimage - launcher may pick a special version, for example 32 vs 64 bit version of nucleus and install it
 #
 # launcher installs and protects nucleus in a privileged zone
 # <at this point syscalls should already work>
@@ -14,23 +14,19 @@ timeout 0
 title Metta
     root (@ROOT@)
     kernel /launcher
-    module /nucleus
     module /sysimage
 
 #title Metta [debug output]
 #    root (@ROOT@)
-#    kernel /kickstart debug
-#    module /kernel-startup
-#    module /system-bootimage
+#    kernel /launcher debug
+#    module /sysimage
 #
 #title Metta 32-bit only
 #    root (@ROOT@)
-#    kernel /kickstart no64
-#    module /kernel-startup
-#    module /system-bootimage
+#    kernel /launcher no64
+#    module /sysimage
 #
 #title Metta 32-bit only [debug output]
 #    root (@ROOT@)
-#    kernel /kickstart no64 debug
-#    module /kernel-startup
-#    module /system-bootimage
+#    kernel /launcher no64 debug
+#    module /sysimage
