--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: c++
 before_install:
   - sudo apt-get install -qq yasm
+  - sudo apt-get install -qq libboost-all-dev
   - wget http://downloads.exquance.com/toolchain-i386-gentoo.tar.bz2
   - tar xf toolchain-i386-gentoo.tar.bz2 -C ..
 script: cd src && ./waf
