--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: c++
 before_install:
   - sudo apt-get install -qq python-software-properties
-  - sudo add-apt-repository ppa:brandonsnider/cdrtools
+  - sudo add-apt-repository -y ppa:brandonsnider/cdrtools
   - sudo apt-get update -qq
   - sudo apt-get install -qq yasm libboost-all-dev mkisofs libossp-uuid-dev
   - wget http://downloads.exquance.com/toolchain-i386-gentoo.tar.bz2
