--- a/src/tools/mettafs/CMakeLists.txt
+++ b/src/tools/mettafs/CMakeLists.txt
@@ -1,3 +1,5 @@
+set_build_for_host()
+
 find_library(UUID_LIBRARY uuid PATHS /usr/local/opt/ossp-uuid/lib)
 mark_as_advanced(UUID_LIBRARY)
 include_directories(/usr/local/opt/ossp-uuid/includes)
