--- a/src/runtime/CMakeLists.txt
+++ b/src/runtime/CMakeLists.txt
@@ -1,11 +1,4 @@
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${KERNEL_CXX_FLAGS}")
-add_definitions(${KERNEL_DEFINES})
-set(CMAKE_LINK_FLAGS "${CMAKE_LINK_FLAGS} ${KERNEL_LINK_FLAGS}")
-
-include_directories(libc++/include)
-include_directories(../kernel/arch/shared) # for panic.h
-include_directories(../kernel/arch/x86) # for ia32.h
-include_directories(../kernel/platform/shared) # for default_console.h
+set_build_for_target()
 
 list(APPEND runtime_SOURCES memutils.cpp cstring.cpp setjmp.s)
 #if (PLATFORM NOT STREQUAL "hosted")
