--- a/src/tools/buildboot/CMakeLists.txt
+++ b/src/tools/buildboot/CMakeLists.txt
@@ -1,3 +1,5 @@
+set_build_for_host()
+
 include_directories(${CMAKE_SOURCE_DIR}/kernel/arch/x86) # fourcc.h
 include_directories(${Boost_INCLUDE_DIR})
 
